till adding project and blog

--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <body>
+    <header>
         <nav id="nav">
         <div class="container">  
         <a href="/main/index.html" id="name">GANGA P CHANDRAN</a>
@@ -24,6 +25,7 @@
           </ul>
         </div>
         </nav>
+    </header>
     <h1 style="text-align: center;">Blogs</h1>
     <h2 style="text-align: center;" > Coming Soon</h2>
     <footer class="contacts">
