--- a/home/home.html
+++ b/home/home.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
+    <header>
     <nav id="nav">
-    <div class="container">
-    <img  class="pic" src="/home/homeimage.svg">   
+    <div class="container"> 
     <a href="/main/index.html" id="name">GANGA P CHANDRAN</a>
       <ul>
           <li>
@@ -23,15 +23,17 @@
               <a href="/projects/projects.html" class="link projects">PROJECTS</a>
         </li>
       </ul>
+    </header>
+    <img src="/home/homeimage.svg" class="pic">
     </div>
     </nav>
-    <header>
+    <main>
            
             <h1 style="text-align: center;"> Home</h1>
             <p> Hi! I am Ganga P Chandran.I am learning to be a full stack web developer.</p>
             <p>Currently I am familiar with HTML,CSS,JavaScript,Java and Python</p>
             <p>I like to show case my work and thus you can see my projects here.I also write technical and non-technical blogs since I like documenting my learning and other experiences. </p>
-    </header>
+   </main>
     <footer class="contacts">
         <img src="/me/me.jpg" height="50vh" width="50vh" class="my_image">
             <ul>
