--- a/projects/projects.html
+++ b/projects/projects.html
@@ -7,6 +7,7 @@
     <link href="/projects/projects.css" rel="stylesheet">   
 </head>
 <body>
+    <header>
     <nav id="nav">
         <div class="container">
         <a href="/main/index.html" id="name">GANGA P CHANDRAN</a>
@@ -17,6 +18,7 @@
         </ul>
         </div>
       </nav>
+    </header>
     <main>
     <h1 style="text-align: center;">Projects</h1>
     <div  >
@@ -31,8 +33,8 @@
         <h2>How Well Do You Know me?</h2>
         <p>It is a nodejs CLI app created as an assignment in neogcamp.It is a quiz to check who knows me the best.</p>
        <ul class="task">
-        <li><a class="link" href="/">Play the game</a></li>
-        <li><a class="link" href="/">View on GitHub</a></li>
+        <li><a class="link" href="https://repl.it/@GangaPChandran/Assignment-2-Quiz-on-Ganga#index.js?embed=1&output=1">Play the game</a></li>
+        <li><a class="link" href="https://github.com/GangaPChandran/Assignment-2-Quiz-on-Ganga/blob/master/index.js">View on GitHub</a></li>
        </ul>
     </div>
     </main>
