--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -11,7 +11,7 @@
     <header>
         <nav id="nav">
         <div class="container">  
-        <a href="/main/index.html" id="name">GANGA P CHANDRAN</a>
+        <a href="/index.html" id="name">GANGA P CHANDRAN</a>
           <ul>
               <li>
                   <a href="/home/home.html" class="link home">HOME</a>
