--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home</title>   
-    <link href="/main/main.css" rel="stylesheet">   
+    <link href="main.css" rel="stylesheet">   
 </head>
 
 <body>
     
     <nav id="nav"> 
     <div class="container">
-        <a href="/main/index.html" id="name">GANGA P CHANDRAN</a>
+        <a href="/index.html" id="name">GANGA P CHANDRAN</a>
         <img  class="pic" src="laptopquote.jpg">
 
       <ul>
