--- a/projects/projects.html
+++ b/projects/projects.html
@@ -10,7 +10,7 @@
     <header>
     <nav id="nav">
         <div class="container">
-        <a href="/main/index.html" id="name">GANGA P CHANDRAN</a>
+        <a href="/index.html" id="name">GANGA P CHANDRAN</a>
         <ul>
             <li><a href="/home/home.html"  class="link home">HOME</a></li>
             <li><a href="/blogs/blogs.html" class="link blogs">BLOGS </a></li>
