--- a/projects/projects.html
+++ b/projects/projects.html
@@ -25,8 +25,8 @@
     <h2> Are you a FRIENDS fan?</h2>
     <p>Another nodejs CLI app created as an assignment in the camp.If you are a FRIENDS fan,let's find how well you know it.</p>
     <ul class="task">
-    <li><a class="link" href="/">Play the game</a></li>
-    <li><a class="link" href="/">View on GitHub</a></li>
+    <li><a class="link" href="https://repl.it/@GangaPChandran/Assignment2Quiz-on-FRIENDS#index.js?embed=1&output=1">Play the game</a></li>
+    <li><a class="link" href="https://github.com/GangaPChandran/Assignment2-Quiz-on-FRIENDS">View on GitHub</a></li>
     </ul>  
     </div>
     <div>
