docs:added blog

--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -27,7 +27,7 @@
         </nav>
     </header>
     <h1 style="text-align: center;">Blogs</h1>
-    <h2 style="text-align: center;" > Coming Soon</h2>
+    <h2 style="text-align: center;" > Coding is fun</h2>
     <footer class="contacts">
         <img src="/me/me.jpg" height="50vh" width="50vh" class="my_image">
             <ul>
