--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -27,7 +27,11 @@
         </nav>
     </header>
     <h1 style="text-align: center;">Blogs</h1>
-    <h2 style="text-align: center;" > Coding is fun</h2>
+    <div>
+    <h2 ><a href="/blogs/fun.html" style="text-align: center;">Coding is fun</a> </h2>
+    <p> Check out this blog to know why everyone of us should try coding and how anyone could enjoy it</p>
+    
+    </div>
     <footer class="contacts">
         <img src="/me/me.jpg" height="50vh" width="50vh" class="my_image">
             <ul>
